--- a/views/create_user.ejs
+++ b/views/create_user.ejs
@@ -475,12 +475,12 @@
                 {
                     field: 'email',
                     rule: ['required', 'email'],
-                    message: 'Email is required and must be valid.'
+                    message: 'Email is required.'
                 },
                 {
                     field: 'phoneNumber',
                     rule: ['required', 'phone'],
-                    message: 'Phone number is required and must be 10-15 digits.'
+                    message: 'Phone number is required.'
                 },
                 {
                     field: 'country',
